--- a/AlkoApp/app/src/main/res/layout/one_drink_fragment.xml
+++ b/AlkoApp/app/src/main/res/layout/one_drink_fragment.xml
@@ -29,12 +29,12 @@
             app:title="@{drink.name}"
             app:titleMarginEnd="32dp" />
 
-        <ImageButton
+        <CheckBox
             android:id="@+id/favouriteButton"
             android:layout_width="?attr/actionBarSize"
             android:layout_height="?attr/actionBarSize"
             android:background="@android:color/transparent"
-            android:src="@android:drawable/btn_star"
+            android:button="@android:drawable/btn_star"
             app:layout_constraintBottom_toBottomOf="@id/toolbar_drink_header"
             app:layout_constraintEnd_toStartOf="@id/deleteButton"
             app:layout_constraintTop_toTopOf="@id/toolbar_drink_header" />
@@ -217,6 +217,7 @@
             app:layout_constraintTop_toBottomOf="@+id/instruction" />
 
         <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/drink_rate_recycler_view"
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_marginStart="16dp"
