--- a/AlkoApp/app/src/main/res/layout/fragment_account.xml
+++ b/AlkoApp/app/src/main/res/layout/fragment_account.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent">
 
     <EditText
-        android:id="@+id/login"
+        android:id="@+id/login_field"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="167dp"
@@ -18,7 +18,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
-        android:id="@+id/password"
+        android:id="@+id/password_field"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
@@ -27,7 +27,7 @@
         android:inputType="textPassword"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/login" />
+        app:layout_constraintTop_toBottomOf="@+id/login_field" />
 
     <Button
         android:id="@+id/login_button"
@@ -35,6 +35,6 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
         android:text="Login"
-        app:layout_constraintEnd_toEndOf="@id/password"
-        app:layout_constraintTop_toBottomOf="@id/password" />
+        app:layout_constraintEnd_toEndOf="@id/password_field"
+        app:layout_constraintTop_toBottomOf="@id/password_field" />
 </androidx.constraintlayout.widget.ConstraintLayout>
