--- a/AlkoApp/app/src/main/res/navigation/mobile_navigation.xml
+++ b/AlkoApp/app/src/main/res/navigation/mobile_navigation.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/mobile_navigation"
-    app:startDestination="@+id/nav_home">
+    app:startDestination="@+id/nav_account">
 
     <fragment
         android:id="@+id/nav_home"
@@ -12,7 +12,7 @@
         tools:layout="@layout/fragment_home" />
 
     <fragment
-        android:id="@+id/nav_tools"
+        android:id="@+id/nav_account"
         android:name="com.example.alkoapp.ui.account.AccountFragment"
         android:label="@string/menu_account"
         tools:layout="@layout/fragment_account" />
