--- a/AlkoApp/app/src/main/res/navigation/mobile_navigation.xml
+++ b/AlkoApp/app/src/main/res/navigation/mobile_navigation.xml
@@ -7,9 +7,9 @@
 
     <fragment
         android:id="@+id/nav_home"
-        android:name="com.example.alkoapp.ui.home.HomeFragment"
+        android:name="com.example.alkoapp.ui.home.RegisterFragment"
         android:label="@string/menu_home"
-        tools:layout="@layout/fragment_home" />
+        tools:layout="@layout/fragment_register" />
 
     <fragment
         android:id="@+id/nav_account"
