--- a/AlkoApp/app/src/main/res/menu/activity_main_drawer.xml
+++ b/AlkoApp/app/src/main/res/menu/activity_main_drawer.xml
@@ -8,6 +8,12 @@
             android:id="@+id/nav_account"
             android:icon="@drawable/ic_menu_manage"
             android:title="@string/menu_account" />
+        <menu>
+            <item
+                android:id="@+id/nav_register"
+                android:icon="@drawable/ic_menu_gallery"
+                android:title="@string/menu_register" />
+        </menu>
 
 
     </group>
