--- a/AlkoApp/app/src/main/res/navigation/mobile_navigation.xml
+++ b/AlkoApp/app/src/main/res/navigation/mobile_navigation.xml
@@ -6,9 +6,9 @@
     app:startDestination="@+id/nav_account">
 
     <fragment
-        android:id="@+id/nav_home"
-        android:name="com.example.alkoapp.ui.home.RegisterFragment"
-        android:label="@string/menu_home"
+        android:id="@+id/nav_register"
+        android:name="com.example.alkoapp.ui.register.RegisterFragment"
+        android:label="@string/menu_register"
         tools:layout="@layout/fragment_register" />
 
     <fragment
